--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 .bannerBgImage{
     height: 100vh;
-    background: url("./images/bannerImage.JPG");
+    background: url("../images/bannerImage.jpg");
     background-size: cover;
     position: relative;
 }
